# fraud-detection-ml

./: .gitignore  README.md
datascience-custom-image/: Dockerfile  imagestream.yaml
datascience-custom-image/mlflow_rhoai_plugin/: mlflow_rhoai_workspace.py  pyproject.toml
feature_repo/: features.py  permissions.py
feature_repo/data/: customer_profiles.parquet  transaction_stats.parquet
helm/fraud-detection-feast/: Chart.yaml  values.yaml
helm/fraud-detection-feast/templates/: NOTES.txt  _helpers.tpl  feast-init-job.yaml  featurestore.yaml  init-data-job.yaml  minio-bucket-job.yaml  minio-deployment.yaml  minio-pvc.yaml  minio-service.yaml  namespace.yaml  parquet-data-job.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  rbac.yaml  secrets.yaml
notebooks/: fraud_detection_feature_store_demo.ipynb  fraud_detection_mlflow_pipeline.ipynb
openshift/: 00-namespace.yaml  01-secrets.yaml  02-minio.yaml  02-rbac.yaml  03-secrets.yaml  04-minio-bucket-job.yaml  05-featurestore.yaml  05-postgres.yaml  06-rbac.yaml  07-init-data-job.yaml  08-parquet-data-job.yaml  cleanup.sh  deploy.sh  feast-init.sh
